--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_collection">Collection</string>
+    <string name="title_category">Category</string>
     <string name="title_download">Download</string>
     <string name="title_setting">Setting</string>
 </resources>
